2007-04-24  Chris Toshok  <toshok@ximian.com>

	* compzilla/src/compzillaWindow.cpp: add the methods from
	compzillaControl here, and also extend this class to allow
	multiple content nodes.

	* compzilla/src/compzillaControl.h: move the atoms stuff out of
	here.

	* compzilla/src/compzillaControl.cpp: move many of the methods
	from here to compzillaWindow (everything that did a FindWin
	followed by an operation, basically, like UnmapWindow, MapWindow,
	WindowDestroyed, etc).

	* compzilla/public/compzillaIWindowManager.idl: add the
	compzillaIWindow parameter to WindowCreated, and remove the return
	type.

	* compzilla/public/compzillaIWindow.idl: add
	Get{String,Atom}Property methods.

	* compzilla/public/compzillaIControl.idl: we don't need
	Get{String,Atom}Property anymore.  they're in compzillaIWindow.idl

	* compzilla/components/compzillaWindowManager.js (WindowCreated):
	call compzillaIWindow.AddContentNodehere instead of returning the
	canvas element.

	* compzilla/Makefile.am (libcompzilla_la_SOURCES): add XAtoms.h

	* compzilla/src/XAtoms.h: new file.  check out that awesome union,
	yo.

2007-04-23  Chris Toshok  <toshok@ximian.com>

	* compzilla/Makefile.am (IDL_FILES): add compzillaIWindow.idl

	* compzilla/public/compzillaIWindow.idl: new interface.

2007-04-23  Chris Toshok  <toshok@ximian.com>

	* compzilla/components/compzillaWindowManager.js: rework the
	property change stuff to take the property.

	* compzilla/src/compzillaControl.cpp: put the window property
	stuff here for now.  Use a property bag to communicate arguments
	to the js.

2007-04-23  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaControl.cpp (AddEventListener,
	RemoveEventListener): Impl nsIDOMEventTarget, farming out to
	mWindowCreateEvMgr for "windowcreate" event.

	* compzilla/src/compzillaWindow.cpp (AddEventListener) 
	(RemoveEventListener): Ditto, but with "destroy", "moveresize",
	"show", "hide", and "propertychange" events.
